@@ -13,7 +13,7 @@
 				<a href="#ReleaseNotesforSirius">Release Notes for Sirius</a>
 				<ol style="list-style: disc;">
 					<li>
-						<a href="#sirius7.2.0">Changes in Sirius 7.2.0</a>
+						<a href="#sirius7.2.1">Changes in Sirius 7.2.1</a>
 						<ol style="list-style: disc;">
 							<li>
 								<a href="#UserVisibleChanges">User-Visible Changes</a>
@@ -27,7 +27,7 @@
 						</ol>
 					</li>
 					<li>
-						<a href="#sirius7.1.0">Changes in Sirius 7.1.0</a>
+						<a href="#sirius7.2.0">Changes in Sirius 7.2.0</a>
 						<ol style="list-style: disc;">
 							<li>
 								<a href="#UserVisibleChanges2">User-Visible Changes</a>
@@ -41,10 +41,24 @@
 						</ol>
 					</li>
 					<li>
-						<a href="#sirius7.0.4">Changes in Sirius 7.0.4</a>
+						<a href="#sirius7.1.0">Changes in Sirius 7.1.0</a>
 						<ol style="list-style: disc;">
 							<li>
 								<a href="#UserVisibleChanges3">User-Visible Changes</a>
+							</li>
+							<li>
+								<a href="#SpecifierVisibleChanges3">Specifier-Visible Changes</a>
+							</li>
+							<li>
+								<a href="#DeveloperVisibleChanges3">Developer-Visible Changes</a>
+							</li>
+						</ol>
+					</li>
+					<li>
+						<a href="#sirius7.0.4">Changes in Sirius 7.0.4</a>
+						<ol style="list-style: disc;">
+							<li>
+								<a href="#UserVisibleChanges4">User-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -52,7 +66,7 @@
 						<a href="#sirius7.0.3">Changes in Sirius 7.0.3</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#DeveloperVisibleChanges3">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges4">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -60,10 +74,10 @@
 						<a href="#sirius7.0.2">Changes in Sirius 7.0.2</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#SpecifierVisibleChanges3">Specifier-Visible Changes</a>
+								<a href="#SpecifierVisibleChanges4">Specifier-Visible Changes</a>
 							</li>
 							<li>
-								<a href="#DeveloperVisibleChanges4">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges5">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -71,23 +85,12 @@
 						<a href="#sirius7.0.1">Changes in Sirius 7.0.1</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#DeveloperVisibleChanges5">Developer-Visible Changes</a>
-							</li>
-						</ol>
-					</li>
-					<li>
-						<a href="#sirius7.0.0">Changes in Sirius 7.0.0</a>
-						<ol style="list-style: disc;">
-							<li>
-								<a href="#UserVisibleChanges4">User-Visible Changes</a>
-							</li>
-							<li>
 								<a href="#DeveloperVisibleChanges6">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
 					<li>
-						<a href="#sirius6.6.0">Changes in Sirius 6.6.0</a>
+						<a href="#sirius7.0.0">Changes in Sirius 7.0.0</a>
 						<ol style="list-style: disc;">
 							<li>
 								<a href="#UserVisibleChanges5">User-Visible Changes</a>
@@ -98,10 +101,21 @@
 						</ol>
 					</li>
 					<li>
+						<a href="#sirius6.6.0">Changes in Sirius 6.6.0</a>
+						<ol style="list-style: disc;">
+							<li>
+								<a href="#UserVisibleChanges6">User-Visible Changes</a>
+							</li>
+							<li>
+								<a href="#DeveloperVisibleChanges8">Developer-Visible Changes</a>
+							</li>
+						</ol>
+					</li>
+					<li>
 						<a href="#sirius6.5.1">Changes in Sirius 6.5.1</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#DeveloperVisibleChanges8">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges9">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -109,13 +123,13 @@
 						<a href="#sirius6.5.0">Changes in Sirius 6.5.0</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#UserVisibleChanges6">User-Visible Changes</a>
+								<a href="#UserVisibleChanges7">User-Visible Changes</a>
 							</li>
 							<li>
-								<a href="#SpecifierVisibleChanges4">Specifier-Visible Changes</a>
+								<a href="#SpecifierVisibleChanges5">Specifier-Visible Changes</a>
 							</li>
 							<li>
-								<a href="#DeveloperVisibleChanges9">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges10">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -125,14 +139,18 @@
 		<p>This document contains the release notes for recent major releases of Sirius. See also 
 			<a href="Release_Notes_Previous.html">the release notes from previous versions</a> for details about older releases.
 		</p>
-		<h2 id="sirius7.2.0">Changes in Sirius 7.2.0</h2>
+		<h2 id="sirius7.2.1">Changes in Sirius 7.2.1</h2>
 		<h3 id="UserVisibleChanges">User-Visible Changes</h3>
+		<h3 id="SpecifierVisibleChanges">Specifier-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges">Developer-Visible Changes</h3>
+		<h2 id="sirius7.2.0">Changes in Sirius 7.2.0</h2>
+		<h3 id="UserVisibleChanges2">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span> Java 17 (or later) is now required to run Sirius.</li>
-			<li><span class="label label-info">Modified</span> When a semantic modification is made to a diagram (e.g. Drag and Drop of an element), the notes and texts attached to the element remain attached, and the notes and texts contained in the element are preserved as far as possible.</li>
-			<li><span class="label label-info">Modified</span> When an element is deleted after drag and drop, its notes and attached text are also removed if preference &#171;Remove/hide note when the annotated element is removed/hidden&#187; is enabled.</li>
+			<li><span class="label label-info">Modified</span> When a semantic modification is made on a diagram (e.g. Drag and Drop of an element), the notes and texts attached to the element remain attached, and the notes and texts contained in the element are preserved as much as possible.</li>
+			<li><span class="label label-info">Modified</span> When an element is deleted after drag and drop, its attached notes and texts are also removed if preference &#8220;Remove/hide note when the annotated element is removed/hidden&#8221; is enabled.</li>
 		</ul>
-		<h3 id="SpecifierVisibleChanges">Specifier-Visible Changes</h3>
+		<h3 id="SpecifierVisibleChanges2">Specifier-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> New decorators are now available for the beginning and edge of edges: 
 				<code>CirclePlus</code>, 
@@ -143,7 +161,7 @@
 				<code>InputArrowWithFillDiamondAndDot</code>.
 			</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges2">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span> Java 17 is required as BREE and source level.</li>
 		</ul>
@@ -151,10 +169,10 @@
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<p><span class="label label-success">Added</span> 
-			<code>org.eclipse.sirius.diagram.ui.business.api.query.NodeQuery.getFreeFormContainerCompartment()</code> is added to get the compartment of the GMF node container with &#171;free form&#187; layout.
+			<code>org.eclipse.sirius.diagram.ui.business.api.query.NodeQuery.getFreeFormContainerCompartment()</code> is added to get the compartment of the GMF node container with &#8220;free form&#8221; layout.
 			<br/><span class="label label-success">Added</span> 
 			<code>org.eclipse.sirius.diagram.ui.business.api.query.ViewQuery.isFreeFormContainer()</code> and 
-			<code>org.eclipse.sirius.diagram.ui.business.api.query.ViewQuery.isRegionContainer()</code> was added to test if a GMF node is associated to DNodeContainer Sirius diagram element with respectively free form layout and stack layout (horizontal or vartical).
+			<code>org.eclipse.sirius.diagram.ui.business.api.query.ViewQuery.isRegionContainer()</code> are added to test if a GMF node is associated to DNodeContainer Sirius diagram element with respectively free form layout and stack layout (horizontal or vartical).
 			<br/><span class="label label-success">Added</span> 
 			<code>org.eclipse.sirius.diagram.ui.business.api.query.ViewQuery.isFreeFormCompartment()</code> is added to test if a GMF node is compartment of node corresponding to a Sirius container free form.
 			<br/><span class="label label-success">Added</span> 
@@ -163,7 +181,7 @@
 			<code>org.eclipse.sirius.diagram.ui.business.api.query.ViewQuery.isNodeLabel()</code> is added to test if a GMF node is associated to label of DNode Sirius diagram element.
 		</p>
 		<h2 id="sirius7.1.0">Changes in Sirius 7.1.0</h2>
-		<h3 id="UserVisibleChanges2">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges3">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> In a tree editor, if the 
 				<code>Shift</code> key is pressed during using the 
@@ -191,7 +209,7 @@
 			<li><span class="label label-info">Modified</span> The Sirius Session Details report (accessible with the &#8220;Properties&#8221; dialog on an aird file) is updated to always show the dependencies even for a not opened Session. The general dependencies are computed from serialized data. The image project dependencies are computed from the opened session or from the serialized data if the Session is not opened. A button is available to update image project dependencies.</li>
 			<li><span class="label label-info">Modified</span> The Copy action is now visible in the tabbar, of a diagram editor, when no diagram element is selected, before it was visible only when at least one diagram element is selected. And the drop-down menu for Paste actions is now visible in the tabbar, of a diagram editor, when at least one diagram element is selected, before it was visible only when no diagram element is selected. </li>
 		</ul>
-		<h3 id="SpecifierVisibleChanges2">Specifier-Visible Changes</h3>
+		<h3 id="SpecifierVisibleChanges3">Specifier-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> The system property 
 				<code>org.eclipse.sirius.ui.enableCreatedElementsConstraintInSelectElementsListener</code> has been added to allow to ignore the &#8220;created elements&#8221; constraint when the 
@@ -210,7 +228,7 @@
 				<code>aql:input.getContextSelections()</code>.
 			</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges2">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges3">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> The interface 
 				<code>org.eclipse.sirius.ecore.extender.business.api.permission.IPermissionAuthority</code> now has a 
@@ -238,7 +256,7 @@
 				<code>org.eclipse.sirius.business.api.session.Session.getSharedMainDAnalysis()</code> is added to get the DAnalysis that holds data and can be shared in some context such as CDO.
 			</li>
 		</ul>
-		<h4 id="Changesinorg.eclipse.sirius.diagram.ui">Changes in 
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui2">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<ul>
@@ -312,24 +330,24 @@
 			</li>
 		</ul>
 		<h2 id="sirius7.0.4">Changes in Sirius 7.0.4</h2>
-		<h3 id="UserVisibleChanges3">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges4">User-Visible Changes</h3>
 		<p>Minor release to avoid errors thrown during indirect deletion of edges whose label is selected (deletion done from outside the diagram editor or from a custom command).</p>
 		<h2 id="sirius7.0.3">Changes in Sirius 7.0.3</h2>
-		<h3 id="DeveloperVisibleChanges3">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges4">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-danger">Removed</span> To ensure compatibility with Eclipse 2022-09, dependency to 
 				<code>com.ibm.icu</code> has been removed.
 			</li>
 		</ul>
 		<h2 id="sirius7.0.2">Changes in Sirius 7.0.2</h2>
-		<h3 id="SpecifierVisibleChanges3">Specifier-Visible Changes</h3>
+		<h3 id="SpecifierVisibleChanges4">Specifier-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> The variables 
 				<code>edgeView</code> and 
 				<code>otherEnd</code> are now also available during precondition evaluation of a reconnect tool. Before, these variables were available only during the reconnection tool execution.
 			</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges4">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges5">Developer-Visible Changes</h3>
 		<h4 id="Changesinorg.eclipse.sirius2">Changes in 
 			<code>org.eclipse.sirius</code>
 		</h4>
@@ -357,7 +375,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius7.0.1">Changes in Sirius 7.0.1</h2>
-		<h3 id="DeveloperVisibleChanges5">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges6">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span> The behavior concerning SVG images export has been improved. You can refer to 
 				<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=578509">bugzilla 578509</a> for more details. This behavior is activated by default but you may disable it by setting the system property 
@@ -366,7 +384,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius7.0.0">Changes in Sirius 7.0.0</h2>
-		<h3 id="UserVisibleChanges4">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges5">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> Some enhancement have been done about the images management.
 				<ul>
@@ -383,7 +401,7 @@
 			<li><span class="label label-info">Modified</span> It is now possible to move a regions container by moving one of its region with the &#8220;Ctrl&#8221; shortcut key pressed. In the same way, it is now possible to select a regions container by clicking on one of its region with the &#8220;Ctrl&#8221; shortcut key pressed.</li>
 			<li><span class="label label-danger">Removed</span> It is no longer possible to change the workspace image of a diagram element with an image from an internal plugin via the &#8220;Set style to workspace image&#8221; action. This functionality affects a very small part of the use cases. The new UI of the &#8220;Set style to workspace image&#8221; action does not support this advanced functionality. However, it is still possible to go through Properties &gt; Style &gt; Workspace Image, then paste the path of the internal plugin image.</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges6">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges7">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> Sirius core and dialects metamodels have been extracted in new 
 				<b>.model</b> plugins with minimum dependencies. Each new plugin is re-exported by the plugin which was the previous container of its metamodel. The base packages of the generated code has not been modified. Each API modification is listed in the corresponding plugin section. Additional dialect providers and extension providers might have to modify the path or references to Sirius .ecore and .genmodel files to reflect this change. The new plugins are:
@@ -565,7 +583,7 @@
 				<code>org.eclipse.sirius.diagram.business.internal.metamodel.helper.ContentHelper.getAllEdgeMappings(diagramDescription, false)</code> alongside with the getAllNodeMappings and getAllContainerMappings methods.
 			</li>
 		</ul>
-		<h4 id="Changesinorg.eclipse.sirius.diagram.ui2">Changes in 
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui3">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<ul>
@@ -710,7 +728,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius6.6.0">Changes in Sirius 6.6.0</h2>
-		<h3 id="UserVisibleChanges5">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges6">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> 4 new actions have been added to control the &#8220;z-order&#8221; of edges. These actions are mainly useful in the context of 
 				<a href="user/diagrams/Diagrams.html#Appearance">jump links</a>. Similar actions already existed for nodes but not for edges. A chapter dedicated to these new actions has been added in 
@@ -718,7 +736,7 @@
 			</li>
 			<li><span class="label label-danger">Removed</span> To be coherent, the actions available &#8220;Diagram/Order&#8221; menu of Eclipse menu bar have been removed. Indeed, these actions are always visible but only valid for nodes. Now, only the contextual menus are to be used (for nodes or for edges).</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges7">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges8">Developer-Visible Changes</h3>
 		<h4 id="Changesinorg.eclipse.sirius.diagram3">Changes in 
 			<code>org.eclipse.sirius.diagram</code>
 		</h4>
@@ -757,7 +775,7 @@
 				</ul>
 			</li>
 		</ul>
-		<h4 id="Changesinorg.eclipse.sirius.diagram.ui3">Changes in 
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui4">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<ul>
@@ -776,7 +794,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius6.5.1">Changes in Sirius 6.5.1</h2>
-		<h3 id="DeveloperVisibleChanges8">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges9">Developer-Visible Changes</h3>
 		<h4 id="Migrations4">Migrations</h4>
 		<ul>
 			<li><span class="label label-info">Modified</span> The migration participant 
@@ -785,7 +803,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius6.5.0">Changes in Sirius 6.5.0</h2>
-		<h3 id="UserVisibleChanges6">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges7">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> It is possible to override at the aird level both &#8220;Sirius/Do Refresh on representation opening&#8221; and &#8220;Sirius/Automatic refresh&#8221; preferences. To override the preferences, right-click on the 
 				<code>aird</code> file, select &#8220;Properties&#8221;, and in the dialog go to the &#8220;Sirius settings&#8221; section. The preferences are stored in the project scope and associated to the aird file. For more details, refer the 
@@ -795,7 +813,7 @@
 				<a href="user/general/SiriusSessionDetailedInformation.html">documentation</a> .
 			</li>
 		</ul>
-		<h3 id="SpecifierVisibleChanges4">Specifier-Visible Changes</h3>
+		<h3 id="SpecifierVisibleChanges5">Specifier-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> A new 
 				<code>CellEditor</code> tool is available for feature column mapping of edition table. It allows to define a specific 
@@ -821,7 +839,7 @@
 				</ul>
 			</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges9">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges10">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> It is now possible to keep semantic element traceability during the representation export. For now, this option is only supported for diagram SVG export. In this case, a new attribute 
 				<code>diagram:targetSemanticId</code> is added on SVG elements to reference the target semantic id on which the graphical element is based on. This option can be activated programmatically or by setting a preference. See the details below:
@@ -879,7 +897,7 @@
 				<code>new DRepresentationQuery(DRpresentation).isAutoRefresh()</code> instead.
 			</li>
 		</ul>
-		<h4 id="Changesinorg.eclipse.sirius.diagram.ui4">Changes in 
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui5">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<ul>
